# automate-temporal-stuff

./: .gitignore  README.md  my_activity.py  pyproject.toml
chapter_03/: README.md  collatz_activity.py  collatz_object.py  my_clipboard.py  pyproject.toml  run_worker.py  run_workflow.py  your_workflows.py
chapter_03/tests/: collatz_activity_test.py
chapter_04/: README.md  character_grid.py  list_joiner.py
chapter_05/: README.md  game_inventory.py
chapter_06/: README.md  table_printer.py
chapter_07/: README.md  regex_search.py  strong_pass_word_detector.py  strong_password_dector.py
chapter_07_encryption/: README.md  codec_server.py  data_objects.py  password_strength_activity.py  starter.py  worker.py
chapter_08/: README.md  mad_lib.py  madlib.txt
chapter_10/: README.md  coin_toss.py
chapter_17/: README.md  stopwatch.py
chapter_18/: README.md  look_busy.py
iot/: README.md  app.py  co2_activity.py  env_workflow.py  node_data.py  run_worker.py  run_workflow.py
iot/templates/: results.html
vhs/: README.md  chapter_03.tape  chapter_04.tape  chapter_05.tape  chapter_06.tape  chapter_07.tape  chapter_07_password.tape  chapter_08.tape  chapter_10.tape  chapter_17.tape  chapter_18.tape  readme.tape  vhs.bash
web_frameworks/: README.md
web_frameworks/fast/: README.md  run_fast.py
web_frameworks/flask/: README.md  run_flask.py
web_frameworks/starlette/: README.md
