[tool.poetry]
name = "comma"
version = "0.1.0"
description = ""
authors = ["Patrick Rachford <prachford@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyautogui = "^0.9.53"
ruff = "^0.0.246"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
temporalio = "^1.1.0"
PyAutoGUI = "^0.9.53"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
format = [{cmd = "ruff --fix ./*/*.py"}]
lint = [{cmd = "ruff check ./*/*.py"}]


[tool.ruff]
select = ["E", "F"]
line-length = 120


[tool.poetry.group.encryption]
optional = true
dependencies = { cryptography = "^38.0.1", aiohttp = "^3.8.1" }