[tool.poetry]
name = "collatz-workflow"
version = "0.0.1"
description = "A Temporal Workflow for the Collatz conjecture."
authors = ["Patrick Rachford <prachford@icloud.com>"]
readme = "README.md"
packages = [{include = "collatz_workflow"}]

[tool.poetry.dependencies]
python = "^3.11"
temporalio = "^1.1.0"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
